[client-web] Fixed alignment of table actions.

--- a/sw/shongo/client-web/src/main/resources/css/application.css
+++ b/sw/shongo/client-web/src/main/resources/css/application.css
@@ -424,6 +424,7 @@ div.actions.collapsed>a {
 }
 .pagination-pages > div {
     margin-top: 10px;
+    margin-left: 10px;
 }
 .pagination-pages .page {
     border: solid 1px;
